<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/confirmName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="136dp"
        android:onClick="changeName"
        android:text="Confirm"
        app:layout_constraintBottom_toTopOf="@+id/confirmEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <EditText
        android:id="@+id/changeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter New Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/changeEmail"
        app:layout_constraintEnd_toStartOf="@+id/confirmName"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <EditText
        android:id="@+id/changeEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="Enter New Email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/changePassword"
        app:layout_constraintEnd_toStartOf="@+id/confirmEmail"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="Enter New Password"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editDataBack"
        app:layout_constraintEnd_toStartOf="@+id/confirmPassword"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirmEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="48dp"
        android:onClick="changeEmail"
        android:text="Confirm"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="100dp"
        android:onClick="changePassword"
        android:text="Confirm"
        app:layout_constraintBottom_toTopOf="@+id/editDataBack"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/editDataBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="editDataBack"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>