<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".UserProfile">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_anchor="@+id/assignmentsContainer"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/changeMyLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/orangePrimary"
            android:text="@string/action_Language"
            android:textColor="#fff" />

        <Button
            android:id="@+id/toAnalysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@color/orangePrimary"
            android:onClick="toAnalysis"
            android:text="@string/user_analysis"
            android:textColor="#fff" />

        <Button
            android:id="@+id/toEditData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/orangePrimary"
            android:onClick="toEditData"
            android:text="@string/user_profile__edit_data"
            android:textColor="#fff" />


    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enterInstruments"
        android:layout_width="237dp"
        android:layout_height="46dp"
        android:hint="@string/profile_enter_instruments_here"
        app:layout_constraintBottom_toTopOf="@+id/InstrumentList"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:background="@color/orangePrimary"
        android:text="@string/profile_add"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/InstrumentList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintBottom_toTopOf="@+id/InstrumentList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <ListView
        android:id="@+id/InstrumentList"
        android:layout_width="339dp"
        android:layout_height="237dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/placeholder"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:textColor="@color/orangePrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

<!--    <androidx.fragment.app.FragmentContainerView-->
<!--        android:id="@+id/showAttachments__user_profile"-->
<!--        android:name="com.themusicians.musiclms.nodeForms.addAttachments.ShowAllAttachmentsFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/InstrumentList" />-->

</androidx.constraintlayout.widget.ConstraintLayout>