<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_1"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/text_label_1" />
    <item
        android:id="@+id/page_2"
        android:icon="@drawable/ic_baseline_person_pin_24"
        android:title="@string/text_label_2"/>
    <item
        android:id="@+id/page_3"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/text_label_3"/>

</menu>