...
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" >

        <Button
            android:id="@+id/toEditData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toEditData"
            android:text="Edit Data"/>

        <Button
            android:id="@+id/chatButton"
            android:layout_width="95dp"
            android:layout_height="53dp"
            android:layout_marginTop="496dp"
...
